# goods-manager

./: docker-compose.yml  test_orders.py
backend/: .env  Dockerfile  analyze_modian_html.py  analyze_modian_iframe.py  check_db.py  clean_db.py  database.py  dump_modian_orders.py  main.py  modian_orders_dump.html  pyproject.toml  run_server.py  scheduler.py  test_playwright.py  upgrade_db.py
backend/core/: config.py
backend/models/: __init__.py  order.py  product.py  reconciliation.py
backend/modian_dumps/: frame_0.html
backend/routers/: orders.py  platforms.py  products.py  reconciliations.py
backend/schemas/: __init__.py  order.py  product.py  reconciliation.py
backend/services/: __init__.py  base_scraper.py  modianplus_service.py  momo_service.py  shopee_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/app/reconciliations/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/lib/: utils.ts
